@@ -53,6 +53,14 @@ class tx_oelib_fakeSession extends tx_oelib_session {
 	}
 
 	/**
+	 * Frees as much memory that has been used by this object as possible.
+	 */
+	public function __destruct() {
+		unset($this->sessionData);
+		parent::__destruct();
+	}
+
+	/**
 	 * Gets the value of the data item for the key $key.
 	 *
 	 * @param	string		the key of the data item to get, must not be empty
