@@ -43,6 +43,20 @@ class tx_oelib_identityMap {
 	protected $items = array();
 
 	/**
+	 * Frees as much memory that has been used by this object as possible.
+	 */
+	public function __destruct() {
+		if (is_array($this->items)) {
+			foreach (($this->items) as $key => $item) {
+				$item->__destruct();
+				unset($this->items[$key]);
+			}
+		}
+
+		unset($this->items);
+	}
+
+	/**
 	 * Adds a model to the identity map.
 	 *
 	 * @param	tx_oelib_model	model to add, must have a UID
