@@ -43,6 +43,7 @@ class tx_oelib_object_testcase extends tx_phpunit_testcase {
 	}
 
 	public function tearDown() {
+		$this->fixture->__destruct();
 		unset($this->fixture);
 	}
 
