@@ -42,6 +42,7 @@ class tx_oelib_salutationswitcherchild_testcase extends tx_phpunit_testcase {
 	}
 
 	public function tearDown() {
+		$this->fixture->__destruct();
 		unset($this->fixture);
 	}
 
