@@ -54,6 +54,7 @@ class tx_oelib_templatehelperchild_testcase extends tx_phpunit_testcase {
 	public function tearDown() {
 		$this->testingFramework->cleanUp();
 
+		$this->fixture->__destruct();
 		unset($this->fixture, $this->testingFramework);
 	}
 
