@@ -1,4 +1,5 @@
 0.4.2 - currently working on
+- [#2123] Fix: Huge memory consumption through createFakeFrontend() in seminars
 - [#1901] Feature: Use more SQL indices
 - [#2188] Feature: Create a mapper for models
 - [#2187] Feature: Create a model class
